--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\AspNetUsersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\THONGTINCANHANsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -361,6 +362,12 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Create.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Delete.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Details.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Edit.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Index.cshtml" />
+    <Content Include="Views\THONGTINCANHANs\Index2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
